# crulz-rs

./: .gitignore  .travis.yml  Cargo.nix  Cargo.toml  README.md  bench.sh  binary_ex_err.crulz  build.rs  flake.nix  nix_trace.txt  run_examples.sh  rustfmt.toml  stresstest.sh
.github/workflows/: rust.yml
benches/: mangle_ast.rs
docs/: bench_results.txt  rexq_new.txt  rexq_new2.txt  rexq_new3.txt  rexq_new4.txt  rexq_new5.txt  rexq_old.txt  stress_example.txt
examples/: 00  00.crulz  01  01.crulz  02  02.crulz  03  03.crulz  04  04.crulz  05  05.crulz  06  06.crulz  08  08.crulz  09.crulz  10.crulz  11.crulz  12.crulz  13.crulz  anum.crulz  index_test.crulz
nix/: nixpkgs.nix  sources.json
src/: ast.rs  hlparser.rs  interp.rs  lexer.rs  lib.rs  llparser.rs  main.rs  mangle_ast.rs  parser.rs  sharpen.rs
src/ast/: mangle.rs  mod.rs  tests.rs
