[package]
name = "crulz"
description = "a rust implementation of the 'crulz' macro language interpreter"
version = "0.1.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
exclude = ["docs/bench_results*.txt","*.sh"]
repository = "https://github.com/zserik/crulz-rs"
license = "Apache-2.0"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
atoi = "0.3"
bincode = { version = "1.2", optional = true }
bstr = { version = "0.2", default-features = false, features = ["serde1", "std"] }
cfg-if = "0.1"
codespan = "0.9"
codespan-reporting = "0.9"
delegate-attr = "0.2"
flate2 = { version = "1.0", optional = true }
gumdrop = "0.8"
itertools = "0.9"
phf = { version = "0.8", features = ["macros"] }
readfilez = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
compile = [ "bincode", "flate2" ]

[profile.release]
lto = true
