[package]
name = "crulz"
description = "a rust implementation of the 'crulz' macro language interpreter"
version = "0.1.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
exclude = ["docs/bench_results*.txt","*.sh"]
repository = "https://github.com/zserik/crulz-rs"
license = "Apache-2.0"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
atoi = "0.3"
# we use an older version of cfg-if to avoid pulling in two different vers
cfg-if = "0.1"
codespan = "0.9"
codespan-reporting = "0.9"
delegate-attr = "0.2"
gumdrop = "0.8"
itertools = "0.9"
lazy_static = "1.4"
maplit = "1.0"
readfilez = "0.2"
thiserror = "1.0"

[dependencies.bincode]
version = "1.3"
optional = true

[dependencies.bstr]
# we need at least that version for bstr::Bytes::as_slice
version = "0.2.14"
default-features = false
features = [ "serde1", "std" ]

[dependencies.flate2]
version = "1.0"
optional = true

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[features]
default = [ "compile" ]
compile = [ "bincode", "flate2" ]

[profile.release]
lto = true
